close #595 clean up on sass and last mixins

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -17,7 +17,7 @@ layout: page
         {% if event.show-on-list %}
        
        
-          <div class="col-xl-4 col-sm-6 col-sx-12">
+          <div class="col-xl-4 col-sm-6 col-12">
             <a href="{{ event.url }}">
               <div class="image-box">
               <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
@@ -48,7 +48,7 @@ layout: page
         
         {% else %}
         
-        <div class="col-xl-4 col-sm-6 col-sx-12">
+        <div class="col-xl-4 col-sm-6 col-12">
           <a href="{{ event.url }}">
             <div class="image-box">
               <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
