--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,15 +3,15 @@ subpage: list
 layout: page
 ---
 
-<div class="bgimg">
-    <div class="wrapper list-detail">
-        <div class="row bg justify-content-center">
-                <div class="col-lg-8 col-md-9">
+<div class="article">
+   
+        <div class="row">
+                <div class="col-12">
                     <h1>{{ page.title }}</h1>
                     <hr>
                     {{ page.content }}
                 </div>
                 {% include components/buttons.html %}
         </div>
-    </div>
+    
 </div>
