--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -10,7 +10,7 @@ layout: page
 
   <div class="row">
     {% for post in site.posts%}
-    <div class="col-xl-4 col-sm-6 col-sx-12">
+    <div class="col-xl-4 col-sm-6 col-12">
       <a href="{{ post.url }}">
         <div class="image-box">
         <img src="{{ post.image }}" alt="{{ post.title }}">
@@ -35,7 +35,7 @@ layout: page
 
   <div class="row">
     {% for post in site.infographics %}
-    <div class="col-xl-4 col-sm-6 col-sx-12">
+    <div class="col-xl-4 col-sm-6 col-12">
       <a href="{{ post.url }}">
         <div class="image-box">
           <img src="{{ post.image }}" alt="{{ post.title }}">
