--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -4,7 +4,7 @@ layout: page
 <div class="article contact">
     <h2>Let's connect</h2>
     <hr>
-    <p>Drop us a message below with your details, and we'll get back to you as fast as we can</p>
+    <p>Drop us a message below with your details, and we'll get back to you as fast as we can!</p>
     <div class="row">
 
         <div class="col-12 col-sm-12 col-md-10">
@@ -12,14 +12,25 @@ layout: page
 
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Full name">
+                </div>
+                <div class="form-group">
                     <input type="text" name="phone" placeholder="Phone">
                 </div>
                 <div class="form-group">
-                    <input type="text" name="topic" placeholder="Topic">
                     <input type="email" name="_replyto" aria-describedby="emailHelp" placeholder="Email">
                 </div>
+                <div class="form-group">
+                    <input type="text" name="topic" placeholder="Topic">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-group textarea" name="message"ion" placeholder="Describe your issue here" rows="5" style="resize: none;"></textarea>
+                </div>
+
                 <input type="submit" value="Send" class="btn call btn-light btn-xl">
+
             </form>
         </div>
+
     </div>
+</div>
 </div>
