--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,8 +3,8 @@ subpage: list
 layout: page
 ---
 
-<div class="article">
-   
+<div class="article short">
+  {% include components/cta-button.html %} 
         <div class="row">
                 <div class="col-12">
                     <h1>{{ page.title }}</h1>
