--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -255,6 +255,30 @@ blockquote p {
   transition: 800ms ease all;
 }
 
+
+.cta-btn {
+position: fixed;
+right: 20vh;
+top: 250px;
+width: 200px;
+@include dark-background;
+box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+padding: 15px;
+font-weight: 600;
+border: none;
+border-radius: 4px;
+@include for-laptop {
+  right: 5vh;
+}
+@include for-ipad-pro {
+  right: 2vh;
+}
+
+@include for-phone-only{
+  display: none;
+}
+}
+
 // Container fluid?????
 
 .container-fluid {
@@ -262,3 +286,18 @@ blockquote p {
   padding-right: 0;
 }
 
+
+.short {
+  width: 1100px;
+  @include page-side-padding;
+  margin: 0;
+  @include for-laptop {
+    width: 900px;
+  }
+  @include for-ipad-pro {
+    width: 700;
+}
+@include for-tablet {
+  width: 100%;
+}
+}
