--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -9,6 +9,7 @@
           <a href="{{ page.url }}" data-proofer-ignore><p>{{ page.title }}</p></a>
       {% endif %}
     {% endfor %}
+    
   </div>
 
   <div class="d-md-none">
@@ -30,7 +31,16 @@
         </ul>
       </div>
     </div>
+    
+  
   </div>
+
+  <div class="contact-bar">
+    <a href="tel:+45 20 87 25 30"><i class="fas fa-phone"></i>  +45 20 87 25 30</a>
+    <a href="mailto:hey@prolike.io"><i class="far fa-envelope"></i> hey@prolike.io</a>
+
+  </div>
+
 
 </nav>
 
