--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -6,12 +6,24 @@ layout: page
 <div class="article short">
   {% include components/cta-button.html %} 
         <div class="row">
-                <div class="col-12">
+               
+                <div class="col-md-8 col-sm-12">
                     <h1>{{ page.title }}</h1>
-                    <hr>
+                    
+
                     {{ page.content }}
+                </div>
+                <div class="col-md-4 col-sm-12">
+                        <div class="used-box">
+                                <p><b>Kompetencer anvendt:</b></p>
+                                <ul>
+                                {% for use in page.used %}
+                                <li>{{ use }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                 </div>
                 {% include components/buttons.html %}
         </div>
-    
+       
 </div>
