--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -33,4 +33,20 @@
         }
     }
 
+    .used-box {
+        background-color: whitesmoke;
+        padding: 10px 10px 20px 10px;
+        margin-bottom: 10px;
+        
+        ul {
+            margin-bottom: 0;
+           
+            li {
+               list-style-type: circle;
+               padding: 5px 0;
+                
+            }
+        }
+    }
+
 }
