--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -267,6 +267,7 @@ padding: 15px;
 font-weight: 600;
 border: none;
 border-radius: 4px;
+z-index: 1000;
 @include for-laptop {
   right: 5vh;
 }
@@ -288,14 +289,14 @@ border-radius: 4px;
 
 
 .short {
-  width: 1100px;
+  width: 80%;
   @include page-side-padding;
   margin: 0;
   @include for-laptop {
     width: 900px;
   }
   @include for-ipad-pro {
-    width: 700;
+    width: 100%;
 }
 @include for-tablet {
   width: 100%;
