close #640 publish the gigs to the website

--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -16,6 +16,7 @@ layout: page
                 <div class="col-md-4 col-sm-12">
                         <div class="used-box">
                                 <p><b>Kompetencer anvendt:</b></p>
+                                <hr class="yellow-hr">
                                 <ul>
                                 {% for use in page.used %}
                                 <li>{{ use }}</li>
