--- a/_layouts/gigs.html
+++ b/_layouts/gigs.html
@@ -5,7 +5,7 @@ layout: page
 <div class="wrapper list">
     <div class="row justify-content-center">
 
-        <div class="col-md-4 col-12 section">
+        <div class="col-sm-4 col-12 section">
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-center">Todo</h2>
@@ -15,10 +15,10 @@ layout: page
                     <div class="row justify-content-center">
                         {% for gig in site.gigs %}
                         {% if gig.status == "todo" %}
-                        <div class="col-xl-6 col-lg-12">
+                        <div class="col-lg-12">
                             <a href="{{ gig.url }}">
                                 <div class="col-12 col-offset-1 item todo align-middle">
-                                    <h3 class="text-center">{{ gig.title }}</h3>
+                                    <h4 class="text-center">{{ gig.title }}</h4>
                                 </div>
                             </a>
                         </div>
@@ -29,7 +29,7 @@ layout: page
             </div>
         </div>
 
-        <div class="col-md-4 col-12 section">
+        <div class="col-sm-4 col-12 section">
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-center">Doing</h2>
@@ -38,10 +38,10 @@ layout: page
                     <div class="row justify-content-center">
                         {% for gig in site.gigs %}
                         {% if gig.status == "doing" %}
-                        <div class="col-xl-6 col-lg-12">
+                        <div class="col-lg-12">
                             <a href="{{ gig.url }}">
                                 <div class="col-12 item doing align-middle">
-                                    <h3 class="text-center">{{ gig.title }}</h3>
+                                    <h4 class="text-center">{{ gig.title }}</h4>
                                 </div>
                             </a>
                         </div>
@@ -51,7 +51,7 @@ layout: page
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-12 section">
+        <div class="col-sm-4 col-12 section">
             <div class="row justify-content-center">
                 <div class="col-12">
                     <h2 class="text-center">Done</h2>
@@ -60,10 +60,10 @@ layout: page
                     <div class="row justify-content-center">
                         {% for gig in site.gigs %}
                         {% if gig.status == "done" %}
-                        <div class="col-xl-6 col-lg-12">
+                        <div class="col-lg-12">
                             <a href="{{ gig.url }}">
                                 <div class="col-12 item done align-middle">
-                                    <h3 class="text-center">{{ gig.title }}</h3>
+                                    <h4 class="text-center">{{ gig.title }}</h4>
                                 </div>
                             </a>
                         </div>
