--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -8,6 +8,11 @@
         width: 100%;
     }
 
+    h1, h2, h3, h4, h5 {
+        margin-top: 30px;
+        margin-bottom: 10px;
+      }
+
     a:hover {
         color: $prolikeyellow;
     }
@@ -35,15 +40,20 @@
 
     .used-box {
         background-color: whitesmoke;
-        padding: 10px 10px 20px 10px;
+        padding: 20px;
         margin-bottom: 10px;
+        margin-top: 30px;
+       @include ul-padding; 
+        * {
+            margin: 0;
+        }
         
         ul {
-            margin-bottom: 0;
+           margin: 10px 0;
            
             li {
-               list-style-type: circle;
-               padding: 5px 0;
+               list-style-type: none;
+               padding: 3px 0;
                 
             }
         }
