--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -35,23 +35,28 @@ h1 {
   margin-top: 10px;
 }
 
+
+h2 {
+  font-size: 1.7em;
+}
+
 @include for-ipad-pro {
   h1 {
     font-size: 2.1em;
   }
   h2 {
-    font-size: 1.8em;
+    font-size: 1.5em;
   }
 
   h3 {
-    font-size: 1.6em;
+    font-size: 1.4em;
   }
 
   h4 {
-    font-size: 1.4em;
+    font-size: 1.2em;
   }
   h5 {
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 
 }
@@ -82,6 +87,12 @@ hr {
   height: 1.5px;
   background: rgba(107,125,153,0.15);
   margin: 0 0 20px 0;
+ }
+
+ hr.yellow-hr {
+  background: $prolikeyellow;
+  opacity: 0.5;
+  box-shadow: none;
  }
 
  // text deco's
@@ -259,7 +270,7 @@ blockquote p {
 .cta-btn {
 position: fixed;
 right: 20vh;
-top: 250px;
+top: 45%;
 width: 200px;
 @include dark-background;
 box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
@@ -289,7 +300,7 @@ z-index: 1000;
 
 
 .short {
-  width: 80%;
+  width: 85%;
   @include page-side-padding;
   margin: 0;
   @include for-laptop {
