--- a/_sass/pages/_list.scss
+++ b/_sass/pages/_list.scss
@@ -6,17 +6,35 @@
     // background-size: cover;
     background-position: center center;
     // background-repeat: no-repeat;
-    
 
-    h1 {
-        font-weight: 600;
+
+    .col-sm-4 {
+        padding: 20px 0 0 0;
+        @include for-ipad-pro {
+            padding: 40px 0 0 0;
+        }
+        .col-12 {
+            padding:0;
+        }
+       
     }
 
+
     .item {
-        margin-top: 1vh;
+        margin: 20px 0;
         color: white;
-        padding: 20px 0;
+        padding: 20px 3px;
         border-radius: 10px;
+        display: grid;
+        align-content: center;
+        height: 200px;
+        @include for-tablet {
+            height: 150px;
+        }
+
+        * {
+            margin: 0;
+        }
     }
 
 
@@ -56,8 +74,3 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
-    .section + .section {
-        margin-top: 5vh;
-    }
-}
