Translated technologies used, deleted english moodle

--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -15,7 +15,7 @@ layout: page
                 </div>
                 <div class="col-md-4 col-sm-12">
                         <div class="used-box">
-                                <p><b>Kompetencer anvendt:</b></p>
+                                <p><b>Technologies used:</b></p>
                                 <hr class="yellow-hr">
                                 <ul>
                                 {% for use in page.used %}
