close #651 boxes can t divide words

--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -13,7 +13,7 @@ layout: page
                 {% for service in site.services %}
                 {% if service.show-on-list == true %}
               
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-xl-4 col-lg-6 col-sm-12">
                     <a href="{{ service.url }}">
                         <div class="service-box">
                             <i class="{{ service.icon }} service-icon"></i>
