close #649 align visual objects

--- a/_includes/components/cta-button.html
+++ b/_includes/components/cta-button.html
@@ -1,3 +1,3 @@
 <button class="cta-btn" onclick="window.location.href = '/contact';">
-    Do you need a similar solution? Contact us here!
+    Do you need a similar solution?<br>Contact us here!
 </button>
