--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,17 +3,20 @@ subpage: list
 layout: page
 ---
 
-<div class="article short">
-  {% include components/cta-button.html %} 
+<div class="article two-row">
+ 
         <div class="row">
                
-                <div class="col-md-8 col-sm-12">
+                <div class="col-md-8 col-sm-12 main-box">
+                       <div class="floating-image float-right"> <img src="{{ page.image }}" alt="{{ page.title }}"></div>
                     <h1>{{ page.title }}</h1>
                     
 
                     {{ page.content }}
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 side-box-outer">
+                        <div class="side-box-inner">
+                               
                         <div class="used-box">
                                 <p><b>Technologies used:</b></p>
                                 <hr class="yellow-hr">
@@ -23,6 +26,8 @@ layout: page
                                 {% endfor %}
                             </ul>
                         </div>
+                        {% include components/cta-button.html %} 
+                </div>
                 </div>
                 {% include components/buttons.html %}
         </div>
