--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -3,20 +3,25 @@
     width: 900px;
     @include page-top-bottom-padding;
     min-height: 80vh;
+
     @include for-laptop {
         @include page-side-padding;
         width: 100%;
     }
 
-    h1, h2, h3, h4, h5 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
         margin-top: 30px;
         margin-bottom: 10px;
-      }
+    }
 
     a:hover {
         color: $prolikeyellow;
     }
-    
+
     img {
         margin-bottom: 20px;
         width: 100%;
@@ -26,10 +31,28 @@
         @include bg-shadow;
     }
 
+    .floating-image {
+        width: 300px;
+        height: 300px;
+        margin: 30px 0 20px 20px;
+
+        img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
+
+        @include for-ipad-pro {
+            width: 100%;
+            height: 150px;
+        }
+    }
+
     .header-image {
         height: 50vh;
         width: 100%;
         margin-bottom: 20px;
+
         img {
             height: 100%;
             width: 100%;
@@ -38,25 +61,52 @@
         }
     }
 
-    .used-box {
-        background-color: whitesmoke;
-        padding: 20px;
-        margin-bottom: 10px;
-        margin-top: 30px;
-       @include ul-padding; 
-        * {
-            margin: 0;
-        }
-        
-        ul {
-           margin: 10px 0;
-           
-            li {
-               list-style-type: none;
-               padding: 3px 0;
-                
+    .side-box-outer {
+        position: relative;
+
+        .side-box-inner {
+            position: fixed;
+            right: 20vh;
+            @include for-laptop {
+                right: 5vh;
+            }
+            @include for-ipad-pro {
+                position: unset;
+            }
+            margin-top: 30px;
+
+            .used-box {
+                background-color: whitesmoke;
+                padding: 20px;
+                width: 100%;
+                margin: 0 0 10px 0;
+                @include ul-padding;
+                * {
+                    margin: 0;
+                }
+
+                ul {
+                    margin: 10px 0;
+
+                    li {
+                        list-style-type: none;
+                        padding: 3px 0;
+
+                    }
+                }
             }
         }
+
+
     }
 
+
+
+}
+
+.two-row {
+    width: 100%;
+    @include page-side-padding;
+
+    .row {}
 }
