--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -268,27 +268,14 @@ blockquote p {
 
 
 .cta-btn {
-position: fixed;
-right: 20vh;
-top: 45%;
-width: 200px;
 @include dark-background;
 box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
 padding: 15px;
 font-weight: 600;
 border: none;
+height: 100px;
 border-radius: 4px;
-z-index: 1000;
-@include for-laptop {
-  right: 5vh;
-}
-@include for-ipad-pro {
-  right: 2vh;
-}
-
-@include for-phone-only{
-  display: none;
-}
+width: 100%;
 }
 
 // Container fluid?????
@@ -298,18 +285,3 @@ z-index: 1000;
   padding-right: 0;
 }
 
-
-.short {
-  width: 85%;
-  @include page-side-padding;
-  margin: 0;
-  @include for-laptop {
-    width: 900px;
-  }
-  @include for-ipad-pro {
-    width: 100%;
-}
-@include for-tablet {
-  width: 100%;
-}
-}
