close #652 minor fixes for moodle service

--- a/_layouts/services-post.html
+++ b/_layouts/services-post.html
@@ -3,7 +3,7 @@ subpage: services
 layout: page
 ---
 
-<div class="article">
+<div class="article service-post">
     {% assign switchlang = page.lang-id %}
     {% for service in site.services %}
     {% if page.lang != service.lang %}
