--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -29,3 +29,11 @@
         padding: 20px 20px 0 20px;
     }
 }
+
+.service-post {
+    img {
+        max-height: 500px;
+        object-fit: cover;
+        object-position: right;
+    }
+}
