--- a/_layouts/flow.html
+++ b/_layouts/flow.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div id="fullpage" class="container-fluid slide-container">
+<div id="" class="container-fluid slide-container">
 
     <section class="slide section">
          <div class="row justify-content-center">
